vemo-app/main/default/objects/PaymentMethod__c/fields/BankAccountCategory__c.field-meta.xml
<CustomField>
    <fullName>BankAccountCategory__c</fullName>
    <inlineHelpText>Personal or Business</inlineHelpText>
    <label>Bank Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BankAccountCategory</valueSetName>
    </valueSet>
</CustomField>