vemo-app/main/default/objects/PaymentMethod__c/fields/BankRoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>BankRoutingNumber__c</fullName>
    <label>Bank Routing Number</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>