vemo-app/main/default/objects/PaymentMethod__c/fields/CreditCardNumber__c.field-meta.xml
<CustomField>
    <fullName>CreditCardNumber__c</fullName>
    <label>Credit Card Number</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>