vemo-app/main/default/objects/PaymentMethod__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Optional description - helpful in case Customer has multiple accounts at one bank.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>