vemo-app/main/default/objects/PaymentMethod__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this payment method inactive?</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>