vemo-app/main/default/objects/PaymentMethod__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this the Customer's primary payment method?</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>