vemo-app/main/default/objects/PaymentMethod__c/fields/PurgePII__c.field-meta.xml
<CustomField>
    <fullName>PurgePII__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, the routing and account number will be purged from salesforce</description>
    <inlineHelpText>If this field is checked, the routing and account number will be purged from salesforce</inlineHelpText>
    <label>Purge PII</label>
    <type>Checkbox</type>
</CustomField>