vemo-app/main/default/objects/PaymentMethod__c/fields/StewardshipDisbursementAccountGUID__c.field-meta.xml
<CustomField>
    <fullName>StewardshipDisbursementAccountGUID__c</fullName>
    <label>Stewardship Disbursement AccountGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>