vemo-app/main/default/objects/PaymentMethod__c/fields/StewardshipPaymentAccountGUID__c.field-meta.xml
<CustomField>
    <fullName>StewardshipPaymentAccountGUID__c</fullName>
    <label>Stewardship Payment AccountGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>