vemo-app/main/default/objects/PaymentMethod__c/fields/StewardshipProcess__c.field-meta.xml
<CustomField>
    <fullName>StewardshipProcess__c</fullName>
    <label>Stewardship Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>The account has been cancelled.</fullName>
            </value>
            <value>
                <fullName>Create Payment AccountGUID</fullName>
            </value>
            <value>
                <fullName>Cancel Payment Account</fullName>
            </value>
            <value>
                <fullName>Create Disbursement AccountGUID</fullName>
            </value>
            <value>
                <fullName>Cancel Disbursement Account</fullName>
            </value>
            <value>
                <fullName>Create Both Payment and Disbusement AccountGUID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>