vemo-app/main/default/objects/PaymentMethod__c/fields/UseForDisbursements__c.field-meta.xml
<CustomField>
    <fullName>UseForDisbursements__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can this payment method be used for disbursements?</inlineHelpText>
    <label>Use For Disbursements</label>
    <type>Checkbox</type>
</CustomField>