vemo-app/main/default/objects/PaymentMethod__c/fields/UseForRecurring__c.field-meta.xml
<CustomField>
    <fullName>UseForRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can this payment method be used for recurring payments?</inlineHelpText>
    <label>Use For Recurring</label>
    <type>Checkbox</type>
</CustomField>