vemo-app/main/default/objects/PaymentMethod__c/recordTypes/BankAccount.recordType-meta.xml
<RecordType>
    <fullName>BankAccount</fullName>
    <active>true</active>
    <label>Bank Account</label>
</RecordType>