vemo-app/main/default/objects/PaymentMethod__c/recordTypes/CreditCard.recordType-meta.xml
<RecordType>
    <fullName>CreditCard</fullName>
    <active>true</active>
    <label>Credit Card</label>
</RecordType>