vemo-app/main/default/objects/PaymentMethod__c/listViews/Awaiting_Tokenization.listView-meta.xml
<ListView>
    <fullName>Awaiting_Tokenization</fullName>
    <columns>NAME</columns>
    <columns>BankAccountCategory__c</columns>
    <columns>BankAccountType__c</columns>
    <columns>BankName__c</columns>
    <columns>Customer__c</columns>
    <columns>Description__c</columns>
    <columns>Inactive__c</columns>
    <columns>BankAccountNumber__c</columns>
    <columns>BankRoutingNumber__c</columns>
    <columns>StewardshipProcess__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>StewardshipDisbursementAccountGUID__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>StewardshipPaymentAccountGUID__c</field>
        <operation>equals</operation>
    </filters>
    <label>Awaiting Tokenization</label>
</ListView>